--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Prerequisites
 *.d
 
@@ -41,6 +43,15 @@
 *.su
 *.idb
 *.pdb
+*.eep
+*.elf
+*.hex
+*.lss
+*.map
+*.srec
+*.d
+*.o
+*.mk
 
 # Kernel Module Compile Results
 *.mod*
